<resources>
    <string name="app_name">News Mart</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings_key_category">categories</string>
    <string name="settings_key_country">countries</string>
    <string name="settings_country_default">us</string>
    <string name="settings_country">Country</string>
    <string name="settings_category_default">general</string>
    <string name="settings_category">Category</string>
</resources>