<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Setting">

    <ListPreference
        android:defaultValue="@string/settings_country_default"
        android:entries="@array/settings_country_labels"
        android:entryValues="@array/settings_country_values"
        android:key="@string/settings_key_country"
        android:title="@string/settings_country" />

    <ListPreference
        android:defaultValue="@string/settings_category_default"
        android:entries="@array/settings_category_labels"
        android:entryValues="@array/settings_category_values"
        android:key="@string/settings_key_category"
        android:title="@string/settings_category" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="dark_mode"
        android:title="Dark Mode" />

</PreferenceScreen>